--- a/wildlife-surveillance/Dockerfile
+++ b/wildlife-surveillance/Dockerfile
@@ -1,5 +1,7 @@
 FROM nvcr.io/nvidia/l4t-base:r32.6.1
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 # Install Python and OpenCV
 RUN apt-get update && apt-get install -y \
     python3-pip python3-dev python3-opencv \
